--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,57 +1,92 @@
-<ion-side-menus>
-    <ion-side-menu-content edge-drag-threshold="true"
-                           drag-content="true">
+<div ng-if="sideMenuOptions['Settings'] != true && sideMenuOptions['Choose League'] != true">
+    <ion-side-menus>
+        <ion-side-menu-content edge-drag-threshold="true"
+                               drag-content="true">
 
-        <ion-header-bar class="bar-dark nav-title-slide-ios7" align-title="left">
-            <div class="buttons">
-                <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-            </div>
-            <h1 class="title">Title!</h1>
-            <div class="buttons">
-                <button class="button button-icon icon ion-android-share-alt"
-                        onclick="window.plugins.socialsharing.share('Message only')"></button>
-            </div>
-        </ion-header-bar>
+            <ion-header-bar class="bar nav-title-slide-ios7 myHeader">
+                <div class="buttons">
+                    <button menu-toggle="left" class="button button-icon icon ion-navicon elements"></button>
+                </div>
+                <h1 class="title elements">
+                    <span ng-repeat="(key,value) in sideMenuOptions | TitleFilter">{{key}}</span>
+                </h1>
+                <div class="buttons">
+                    <button class="button button-icon icon ion-android-share-alt elements"
+                            ng-click="shareMessage()"></button>
+                </div>
+            </ion-header-bar>
 
-        <my-side-menu-content></my-side-menu-content>
+            <my-side-menu-content></my-side-menu-content>
 
-    </ion-side-menu-content>
+        </ion-side-menu-content>
 
-    <ion-side-menu side="left" expose-aside-when="large">
-        <ion-content>
-            <div class="list">
-                <a class="item item-icon-left"
-                   ui-sref="main.addDish">
-                    <i class="icon ion-ios-football dark"></i>
-                    Football Tips
-                </a>
-                <a class="item item-icon-left">
-                    <i class="icon ion-flag dark"></i>
-                    Horse Racing Tips
-                </a>
-                <a class="item item-icon-left" >
-                    <i class="icon ion-ios-football-outline dark"></i>
-                    NFL Tips
-                </a>
+        <ion-side-menu side="left" expose-aside-when="large">
+            <ion-content>
+                <div class="list">
 
-                <a class="item" style="border-color: #ddd !important;">
-                    Accuracy
-                </a>
-                <a class="item">
-                    Settings
-                </a>
-                <a class="item">
-                    Rate Us
-                </a>
-            </div>
-        </ion-content>
-    </ion-side-menu>
+                    <a class="item item-icon-left" ng-click="changeMenu('Football Tips');">
+                        <i class="icon ion-ios-football dark"></i>
+                        Football Tips
+                        <span class="badge badge-assertive">{{badges.FootballTips}}</span>
+                    </a>
 
-</ion-side-menus>
+                    <a class="item item-icon-left" ng-click="changeMenu('Horse Racing Tips');">
+                        <i class="icon ion-flag dark"></i>
+                        Horse Racing Tips
+                        <span class="badge badge-assertive">{{badges.HorsesTips}}</span>
+                    </a>
 
+                    <a class="item item-icon-left" ng-click="changeMenu('NFL Tips');">
+                        <i class="icon ion-ios-football-outline dark"></i>
+                        NFL Tips
+                        <span class="badge badge-assertive">{{badges.NFLTips}}</span>
+                    </a>
 
+                    <a class="item" style="border-color: #ddd !important;" ng-click="changeMenu('Accuracy');">
+                        Accuracy
+                    </a>
 
-<style>
+                    <a class="item" ng-click="changeMenu('Settings');">
+                        Settings
+                    </a>
+
+                    <a class="item" ng-click="changeMenu('Choose League');">
+                        Choose League
+                    </a>
+
+                    <a class="item" ng-click="changeMenu('Rate Us');">
+                        Rate Us
+                    </a>
+                </div>
+            </ion-content>
+        </ion-side-menu>
+
+    </ion-side-menus>
+</div>
+
+<div ng-if="sideMenuOptions['Settings'] == true">
+    <ion-header-bar class="bar myHeader">
+            <button class="button button-icon icon ion-android-arrow-back elements"
+                    ng-click="goBackFromSettings()"></button>
+        <h1 class="title elements">Settings
+        </h1>
+    </ion-header-bar>
+
+</div>
+
+<div ng-if="sideMenuOptions['Choose League'] == true">
+    <ion-header-bar class="bar myHeader">
+        <button class="button button-icon icon ion-android-arrow-back elements"
+                ng-click="goBackFromChooseLeague()"></button>
+        <h1 class="title elements">Choose League
+        </h1>
+    </ion-header-bar>
+    <ion-content>
+        <choose-league></choose-league>
+    </ion-content>
+</div>
+
+          <style>
     .item{
         border-color: #ffffff !important;
     }
