--- a/www/templates/my-side-menu-content.html
+++ b/www/templates/my-side-menu-content.html
@@ -1,8 +1,8 @@
 <div ng-if="sideMenuOptions['Football Tips']">
 
    <ion-pane class="has-header">
-       <div class="tabs-striped tabs-top">
-           <div class="tabs myTabs">
+       <div class="tabs-striped tabs-top topHeader">
+           <div class="tabs topHeader">
                <a class="tab-item"
                   ng-click="tabs_daily = true; urlArgs.time = 'Daily'; getJson()"
                   ng-class="{'active': tabs_daily == true}">
@@ -15,52 +15,95 @@
                </a>
            </div>
 
-           <div style="margin-top:96px">
+           <div class="tabs topHeader bottomHeader">
+               <select ng-model="urlArgs.winType">
+                   <option value="Home Wins">Home Wins
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HomeTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HomeTotal}}</span>
+                   </option>
+                   <option value="Away Wins">Away Wins
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.AwayTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.AwayTotal}}</span>
+                   </option>
+                   <option value="High Scoring">High Scoring
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HighTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HighTotal}}</span>
+                   </option>
+                   <option value="Low Scoring">Low Scoring
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.LowTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.LowTotal}}</span>
+                   </option>
+                   <option value="BTTS">BTTS
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.BTTSTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.BTTSTotal}}</span>
+                   </option>
+               </select>
+
+
+               <button class="button" ng-class="{'option-active': urlArgs.star == '4 Star', 'option-passive': urlArgs.star != '4 Star'}"
+                       ng-click="urlArgs.star = '4 Star'">4 Star Tips
+                   <span class="badge badge-assertive">{{badges[badgeArray[0]]}}</span>
+               </button>
+
+               <button class="button"ng-class="{'option-active': urlArgs.star == '5 Star', 'option-passive': urlArgs.star != '5 Star'}"
+                       ng-click="urlArgs.star = '5 Star'">5 Star Tips&nbsp;
+                   <i class="icon ion-android-lock" ng-show="true"></i>
+                   <span class="badge badge-assertive">{{badges[badgeArray[1]]}}</span>
+               </button>
+           </div>
+
+          <!-- <div class="bar topHeader" ng-click="chooseType()">
+               <select ng-model="urlArgs.winType">
+                   <option selected value="Home Wins">Home Wins
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HomeTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HomeTotal}}</span>
+                   </option>
+                   <option value="Away Wins">Away Wins
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.AwayTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.AwayTotal}}</span>
+                   </option>
+                   <option value="High Scoring">High Scoring
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HighTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HighTotal}}</span>
+                   </option>
+                   <option value="Low Scoring">Low Scoring
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.LowTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.LowTotal}}</span>
+                   </option>
+                   <option value="BTTS">BTTS
+                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.BTTSTodayTotal}}</span>
+                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.BTTSTotal}}</span>
+                   </option>
+               </select>
+               <div class="buttons">
+
+                   <button class="button" ng-class="{'option-active': urlArgs.star == '4 Star', 'option-passive': urlArgs.star != '4 Star'}"
+                           ng-click="urlArgs.star = '4 Star'">4 Star Tips
+                       <span class="badge badge-assertive">{{badges[badgeArray[0]]}}</span>
+                   </button>
+
+                   <button class="button"ng-class="{'option-active': urlArgs.star == '5 Star', 'option-passive': urlArgs.star != '5 Star'}"
+                           ng-click="urlArgs.star = '5 Star'">5 Star Tips&nbsp;
+                       <i class="icon ion-android-lock" ng-show="true"></i>
+                       <span class="badge badge-assertive">{{badges[badgeArray[1]]}}</span>
+                   </button>
+
+               </div>
+
+           </div>-->
+
+
+
+
+           <div>
                <my-tabs-content></my-tabs-content>
            </div>
        </div>
+
+
+
+
    </ion-pane>
-
-    <div class="bar bar-footer mySelect" ng-click="chooseType()">
-        <select ng-model="urlArgs.winType">
-            <option selected value="Home Wins">Home Wins
-                <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HomeTodayTotal}}</span>
-                <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HomeTotal}}</span>
-            </option>
-            <option value="Away Wins">Away Wins
-                <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.AwayTodayTotal}}</span>
-                <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.AwayTotal}}</span>
-            </option>
-            <option value="High Scoring">High Scoring
-                <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HighTodayTotal}}</span>
-                <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HighTotal}}</span>
-            </option>
-            <option value="Low Scoring">Low Scoring
-                <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.LowTodayTotal}}</span>
-                <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.LowTotal}}</span>
-            </option>
-            <option value="BTTS">BTTS
-                <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.BTTSTodayTotal}}</span>
-                <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.BTTSTotal}}</span>
-            </option>
-        </select>
-        <div class="buttons">
-
-            <button class="button" ng-class="{'option-active': urlArgs.star == '4 Star', 'option-passive': urlArgs.star != '4 Star'}"
-                    ng-click="urlArgs.star = '4 Star'">4 Star Tips
-                <span class="badge badge-assertive">{{badges[badgeArray[0]]}}</span>
-            </button>
-
-            <button class="button"ng-class="{'option-active': urlArgs.star == '5 Star', 'option-passive': urlArgs.star != '5 Star'}"
-                    ng-click="urlArgs.star = '5 Star'">5 Star Tips&nbsp;
-                <i class="icon ion-android-lock" ng-show="true"></i>
-                <span class="badge badge-assertive">{{badges[badgeArray[1]]}}</span>
-            </button>
-
-        </div>
-
-    </div>
-
 </div>
 
 <ion-content class="has-header">
