--- a/www/templates/my-tabs-content.html
+++ b/www/templates/my-tabs-content.html
@@ -14,7 +14,7 @@
 
     <!--</button>-->
 <!--</div>-->
-<ion-content class="has-header has-subheader has-footer">
+<ion-content class="has-header has-subheader mainContent" style="top: 143px !important;">
     <div>
         <div ng-if="urlArgs.star == '4 Star'">
             <div ng-if="stock[0] == ''">{{content.message}}</div>
