--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -24,37 +24,44 @@
             <ion-content>
                 <div class="list">
 
-                    <a class="item item-icon-left" ng-click="changeMenu('Football Tips'); getJson();">
+                    <a class="item item-icon-left" ng-click="changeMenu('Football Tips'); getJson();"
+                            ng-class="{'menu-active': urlArgs.first == 'Football Tips'}">
                         <i class="icon ion-ios-football dark"></i>
                         Football Tips
                         <span class="badge badge-assertive">{{badges.FootballTips}}</span>
                     </a>
 
-                    <a class="item item-icon-left" ng-click="changeMenu('Horse Racing Tips');getJson();">
+                    <a class="item item-icon-left" ng-click="changeMenu('Horse Racing Tips');getJson();"
+                       ng-class="{'menu-active': urlArgs.first == 'Horse Racing Tips'}">
                         <i class="icon ion-flag dark"></i>
                         Horse Racing Tips
                         <span class="badge badge-assertive">{{badges.HorsesTips}}</span>
                     </a>
 
-                    <a class="item item-icon-left" ng-click="changeMenu('NFL Tips'); getJson();" style="border-bottom: 1px solid white">
+                    <a class="item item-icon-left" ng-click="changeMenu('NFL Tips'); getJson();" style="border-bottom: 1px solid white"
+                       ng-class="{'menu-active': urlArgs.first == 'NFL Tips'}">
                         <i class="icon ion-ios-football-outline dark"></i>
                         NFL Tips
                         <span class="badge badge-assertive">{{badges.NFLTips}}</span>
                     </a>
 
-                    <a class="item" style="border-color: #ddd !important;" ng-click="changeMenu('Accuracy');getJson();">
+                    <a class="item" style="border-color: #ddd !important;" ng-click="changeMenu('Accuracy');getJson();"
+                       ng-class="{'menu-active': urlArgs.first == 'Accuracy'}">
                         Accuracy
                     </a>
 
-                    <a class="item" ng-click="changeMenu('Settings');">
+                    <a class="item" ng-click="changeMenu('Settings');"
+                       ng-class="{'menu-active': urlArgs.first == 'Settings'}">
                         Settings
                     </a>
 
-                    <a class="item" ng-click="changeMenu('Choose League'); getLeagues();">
+                    <a class="item" ng-click="changeMenu('Choose League');"
+                       ng-class="{'menu-active': urlArgs.first == 'Choose League'}">
                         Choose League
                     </a>
 
-                    <a class="item" ng-click="changeMenu('Rate Us');">
+                    <a class="item" ng-click="changeMenu('Rate Us');"
+                       ng-class="{'menu-active': urlArgs.first == 'Rate Us'}">
                         Rate Us
                     </a>
                 </div>
