--- a/www/templates/my-side-menu-content.html
+++ b/www/templates/my-side-menu-content.html
@@ -4,52 +4,64 @@
        <div class="tabs-striped tabs-top topHeader">
            <div class="tabs topHeader">
                <a class="tab-item"
-                  ng-click="tabs_daily = true; urlArgs.time = 'Daily'; getJson()"
-                  ng-class="{'active': tabs_daily == true}">
+                  ng-click="urlArgs.time = 'Daily'; getJson()"
+                  ng-class="{'active': urlArgs.time == 'Daily'}">
                    Daily Tips
                </a>
                <a class="tab-item"
-                  ng-click="tabs_daily = false; urlArgs.time = 'Weekly'; getJson()"
-                  ng-class="{'active': tabs_daily == false}">
+                  ng-click="urlArgs.time = 'Weekly'; getJson()"
+                  ng-class="{'active': urlArgs.time == 'Weekly'}">
                    Weekly Picks
                </a>
            </div>
 
            <div class="tabs topHeader bottomHeader">
-               <select ng-model="urlArgs.winType">
-                   <option value="Home Wins">Home Wins
-                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HomeTodayTotal}}</span>
-                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HomeTotal}}</span>
-                   </option>
-                   <option value="Away Wins">Away Wins
-                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.AwayTodayTotal}}</span>
-                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.AwayTotal}}</span>
-                   </option>
-                   <option value="High Scoring">High Scoring
-                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HighTodayTotal}}</span>
-                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HighTotal}}</span>
-                   </option>
-                   <option value="Low Scoring">Low Scoring
-                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.LowTodayTotal}}</span>
-                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.LowTotal}}</span>
-                   </option>
-                   <option value="BTTS">BTTS
-                       <span class="badge badge-assertive" ng-show="tabs_daily">{{badges.BTTSTodayTotal}}</span>
-                       <span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.BTTSTotal}}</span>
-                   </option>
-               </select>
-
-
-               <button class="button" ng-class="{'option-active': urlArgs.star == '4 Star', 'option-passive': urlArgs.star != '4 Star'}"
-                       ng-click="urlArgs.star = '4 Star'">4 Star Tips
-                   <span class="badge badge-assertive">{{badges[badgeArray[0]]}}</span>
+               <button class="button my-select-button" ng-click=" openPopup('popWin')">{{urlArgs.winType}}
+                   <span class="badge badge-assertive" >{{filteredResult[0].length + filteredResult[1].length}}</span>
+                   <span class="badge badge-assertive" ng-if="filteredResult[0].length + filteredResult[1].length == undefined">0</span>
+               </button>
+               <button class="button my-select-button" ng-click="openPopup('popStar')">{{urlArgs.star}} Tips
+                   <i class="icon ion-android-lock" ng-show="true" ng-if="urlArgs.star == '5 Star'"></i>
+                   <span class="badge badge-assertive" ng-if="urlArgs.star == '4 Star'">{{filteredResult[0].length}}</span>
+                   <span class="badge badge-assertive" ng-if="urlArgs.star == '4 Star' && filteredResult[0].length == undefined">0</span>
+                   <span class="badge badge-assertive" ng-if="urlArgs.star == '5 Star'">{{filteredResult[1].length}}</span>
+                   <span class="badge badge-assertive" ng-if="urlArgs.star == '5 Star' && filteredResult[1].length == undefined">0</span>
                </button>
 
-               <button class="button"ng-class="{'option-active': urlArgs.star == '5 Star', 'option-passive': urlArgs.star != '5 Star'}"
-                       ng-click="urlArgs.star = '5 Star'">5 Star Tips&nbsp;
-                   <i class="icon ion-android-lock" ng-show="true"></i>
-                   <span class="badge badge-assertive">{{badges[badgeArray[1]]}}</span>
-               </button>
+               <!--<select ng-model="urlArgs.winType">-->
+                   <!--<option value="Home Wins">Home Wins-->
+                       <!--<span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HomeTodayTotal}}</span>-->
+                       <!--<span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HomeTotal}}</span>-->
+                   <!--</option>-->
+                   <!--<option value="Away Wins">Away Wins-->
+                       <!--<span class="badge badge-assertive" ng-show="tabs_daily">{{badges.AwayTodayTotal}}</span>-->
+                       <!--<span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.AwayTotal}}</span>-->
+                   <!--</option>-->
+                   <!--<option value="High Scoring">High Scoring-->
+                       <!--<span class="badge badge-assertive" ng-show="tabs_daily">{{badges.HighTodayTotal}}</span>-->
+                       <!--<span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.HighTotal}}</span>-->
+                   <!--</option>-->
+                   <!--<option value="Low Scoring">Low Scoring-->
+                       <!--<span class="badge badge-assertive" ng-show="tabs_daily">{{badges.LowTodayTotal}}</span>-->
+                       <!--<span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.LowTotal}}</span>-->
+                   <!--</option>-->
+                   <!--<option value="BTTS">BTTS-->
+                       <!--<span class="badge badge-assertive" ng-show="tabs_daily">{{badges.BTTSTodayTotal}}</span>-->
+                       <!--<span class="badge badge-assertive" ng-hide="tabs_daily">{{badges.BTTSTotal}}</span>-->
+                   <!--</option>-->
+               <!--</select>-->
+
+
+               <!--<button class="button" ng-class="{'option-active': urlArgs.star == '4 Star', 'option-passive': urlArgs.star != '4 Star'}"-->
+                       <!--ng-click="urlArgs.star = '4 Star'">4 Star Tips-->
+                   <!--<span class="badge badge-assertive">{{badges[badgeArray[0]]}}</span>-->
+               <!--</button>-->
+
+               <!--<button class="button"ng-class="{'option-active': urlArgs.star == '5 Star', 'option-passive': urlArgs.star != '5 Star'}"-->
+                       <!--ng-click="urlArgs.star = '5 Star'">5 Star Tips&nbsp;-->
+                   <!--<i class="icon ion-android-lock" ng-show="true"></i>-->
+                   <!--<span class="badge badge-assertive">{{badges[badgeArray[1]]}}</span>-->
+               <!--</button>-->
            </div>
 
           <!-- <div class="bar topHeader" ng-click="chooseType()">
