--- a/www/templates/my-tabs-content.html
+++ b/www/templates/my-tabs-content.html
@@ -14,12 +14,14 @@
 
     <!--</button>-->
 <!--</div>-->
-<ion-content class="has-header has-subheader mainContent" style="top: 143px !important;">
+<ion-content class="has-header has-subheader mainContent" style="top: 164px !important">
     <div>
         <div ng-if="urlArgs.star == '4 Star'">
-            <div ng-if="content[0].success == 0">{{content[0].message}}</div>
+            <div ng-if="filteredResult[0].length == 0" class="row">
+                <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto">There are no tips available at this time</h4>
+            </div>
             <div ng-if="content[0].success == 1" class="row"  ng-class-even="'listEven'" ng-class-odd="'listOdd'"
-                 ng-repeat="record in stock[0]">
+                 ng-repeat="record in filteredResult[0]">
                 <div class="col">
                     <div class="row">
                         {{record.HomeTeam}}
@@ -38,9 +40,11 @@
             </div>
         </div>
         <div ng-if="urlArgs.star == '5 Star'" class="myList">
-            <div ng-if="content[1].success == 0">{{content[1].message}}</div>
+            <div ng-if="filteredResult[1].length == 0" class="row">
+                <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto">There are no tips available at this time</h4>
+            </div>
             <div ng-if="content[1].success == 1" class="row" ng-class-even="'listEven'" ng-class-odd="'listOdd'"
-                 ng-repeat="record in stock[1]">
+                 ng-repeat="record in filteredResult[1]">
                 <div class="col">
                     <div class="row">
                         {{record.HomeTeam}}
