--- a/www/templates/my-side-menu-content.html
+++ b/www/templates/my-side-menu-content.html
@@ -120,7 +120,9 @@
 
 <ion-content class="has-header">
     <div ng-if="sideMenuOptions['Horse Racing Tips']">
-        <div ng-if="stock[0] == ''">{{content.message}}</div>
+        <div ng-if="stock[0] == ''" class="row">
+            <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto">There are no tips available at this time</h4>
+        </div>
         <div ng-repeat="st in stock[0]" class="row"
              ng-class-even="'listEven'" ng-class-odd="'listOdd'">
             <div class="col">{{st.ID}}</div>
@@ -131,7 +133,9 @@
     </div>
 
     <div ng-if="sideMenuOptions['NFL Tips']">
-        <div ng-if="stock[0] == ''">{{content.message}}</div>
+        <div ng-if="stock[0] == ''" class="row">
+            <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto">There are no tips available at this time</h4>
+        </div>
         <div ng-repeat="st in stock[0]" class="row"
              ng-class-even="'listEven'" ng-class-odd="'listOdd'">
             <div class="col">{{st.Match}}</div>
@@ -142,10 +146,10 @@
 
     <div ng-if="sideMenuOptions['Accuracy']">
         <div ng-show="urlArgs.first == 'Accuracy'">
-            <div class="row" ng-repeat="(key,value) in stock[0][0]"
+            <div class="row" ng-repeat="(key,value) in accuracy | orderAccuracyBy : accuracyorder"
                  ng-class-even="'listEven'" ng-class-odd="'listOdd'" >
-                <div class="col">{{key}}</div>
-                <div class="col">{{value}}</div>
+                <div class="col">{{value.name}}</div>
+                <div class="col">{{value.percent}}%</div>
             </div>
         </div>
     </div>
